apps/prod/rbx-console/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: rbx-console
spec:
  redirectScheme:
    scheme: https
    permanent: true
