apps/prod/rbx-console/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rbx-console
  labels:
    app.kubernetes.io/part-of: rbx-console
