apps/prod/rbx-console/svc.yml
# Service: rbx-console
apiVersion: v1
kind: Service
metadata:
  name: rbx-console
  namespace: rbx-console
  labels:
    app.kubernetes.io/name: rbx-console
    app.kubernetes.io/part-of: rbx-console
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rbx-console
  ports:
    - port: 80
      targetPort: 3000
      name: http
